--- a/index.html
+++ b/index.html
@@ -4,36 +4,101 @@
   <meta charset="UTF-8" />
   <title>iTFactor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Hollywood-grade self tapes on iPhone. Built for working actors." />
+
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      margin: 0;
+      height: 100vh;
       background: #0b0b0b;
       color: #ffffff;
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
       display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
+      text-align: center;
+    }
+
+    .content {
+      margin-top: 10vh;
+      padding: 20px;
+      max-width: 600px;
+    }
+
+    img.logo {
+      width: 160px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      font-size: 2.5rem;
       margin: 0;
     }
-    .container {
-      text-align: center;
-      max-width: 600px;
-      padding: 20px;
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
-    }
-    p {
+
+    p.subtitle {
       opacity: 0.8;
+      margin: 15px 0 25px;
       font-size: 1.1rem;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0 0 25px;
+    }
+
+    li {
+      opacity: 0.85;
+      margin: 6px 0;
+    }
+
+    .links a {
+      color: #ffffff;
+      text-decoration: none;
+      margin: 0 12px;
+      opacity: 0.8;
+      font-size: 0.95rem;
+    }
+
+    .links a:hover {
+      opacity: 1;
+    }
+
+    footer {
+      margin-bottom: 25px;
+      font-size: 0.8rem;
+      opacity: 0.5;
     }
   </style>
 </head>
+
 <body>
-  <div class="container">
+  <div class="content">
+    <img class="logo" src="/logo.png" alt="iTFactor logo" />
+
     <h1>iTFactor</h1>
-    <p>Your complete acting toolkit. Coming soon.</p>
+
+    <p class="subtitle">
+      Hollywood-grade self tapes on iPhone
+    </p>
+
+    <ul>
+      <li>🎥 Pro camera</li>
+      <li>✂️ Instant editing & export</li>
+      <li>🎬 Built for working actors</li>
+    </ul>
+
+    <div class="links">
+      <a href="https://instagram.com/itfactor_selftapestudio" target="_blank">Instagram</a>
+      <a href="mailto:support@itfactor.app">Support</a>
+    </div>
   </div>
+
+  <footer>
+    <a href="/privacy.html">Privacy Policy</a> ·
+    <a href="/terms.html">Terms of Service</a><br/>
+    © iTFactor
+  </footer>
 </body>
 </html>
