Update privacy policy formatting and content
Updated to - iT_Factor_Privacy_Policy_GDPR_CCPA_Feb_22_2026

--- a/privacy.html
+++ b/privacy.html
@@ -2,56 +2,188 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Privacy Policy – iTFactor</title>
+  <title>Privacy Policy – iT Factor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       background: #0b0b0b;
       color: #ffffff;
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      max-width: 700px;
-      margin: 40px auto;
+      max-width: 800px;
+      margin: 60px auto;
       padding: 20px;
-      line-height: 1.6;
+      line-height: 1.7;
     }
-    h1, h2 {
-      margin-top: 30px;
+    h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+    h2 {
+      margin-top: 40px;
+      font-size: 20px;
+      border-bottom: 1px solid rgba(255,255,255,0.15);
+      padding-bottom: 8px;
+    }
+    h3 {
+      margin-top: 25px;
+      font-size: 16px;
+    }
+    p {
+      margin: 10px 0;
+      opacity: 0.95;
+    }
+    ul {
+      margin: 10px 0 10px 20px;
+    }
+    li {
+      margin: 6px 0;
     }
     a {
       color: #ffffff;
       opacity: 0.85;
+      text-decoration: underline;
+    }
+    .meta {
+      opacity: 0.7;
+      margin-bottom: 30px;
     }
   </style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
 
-  <p>iTFactor respects your privacy.</p>
+<h1>Privacy Policy</h1>
 
-  <h2>Information We Collect</h2>
-  <p>
-    The iTFactor app may collect information you provide directly, such as account details,
-    media you upload, and support communications.
-  </p>
+<p class="meta">
+  <strong>iT Factor — Self Tape Studio</strong><br>
+  Effective Date: February 22, 2026<br>
+  Developer: Kevin Barrett (Apple Developer Program — Individual)<br>
+  Contact: <a href="mailto:support@itfactor.app">support@itfactor.app</a>
+</p>
 
-  <h2>How We Use Information</h2>
-  <p>
-    Information is used solely to provide and improve app functionality, including
-    creating, editing, and managing self-tapes.
-  </p>
+<h2>1. Overview</h2>
+<p>
+iT Factor — Self Tape Studio (“STS,” “we,” “us,” or “our”) is a professional self-tape recording and audition workflow application.
+</p>
+<p>
+This Privacy Policy explains what information we collect, how we use it, and your rights regarding your information. STS is designed to minimize data collection and does not sell or monetize personal data.
+</p>
 
-  <h2>Data Sharing</h2>
-  <p>
-    We do not sell or rent your personal information. Data is only shared when necessary
-    to operate app features or comply with legal obligations.
-  </p>
+<h2>2. Information We Collect</h2>
+<p>We collect only the information necessary to provide and improve STS.</p>
 
-  <h2>Contact</h2>
-  <p>
-    For questions about this policy, contact
-    <a href="mailto:support@itfactor.app">support@itfactor.app</a>.
-  </p>
+<h3>A. Profile Information (if provided)</h3>
+<p>If you choose to create and manage a profile within the app, we may collect:</p>
+<ul>
+  <li>Name or stage name</li>
+  <li>Optional profile details you choose to provide (e.g., representation information, union status, sizing information)</li>
+</ul>
+<p>Providing profile details is voluntary.</p>
 
-  <p><em>Last updated: January 2026</em></p>
+<h3>B. Content You Create</h3>
+<p>STS allows you to create and manage media content, including:</p>
+<ul>
+  <li>Video recordings</li>
+  <li>Audio recordings</li>
+  <li>Photos or keyframes</li>
+  <li>Project metadata (scene names, notes, ratings, tags)</li>
+</ul>
+<p>
+Your recordings and creative content remain your property.
+</p>
+<p>
+If iCloud sync is enabled, this data is stored using Apple’s CloudKit infrastructure under your Apple ID.
+</p>
+<p>
+We do not access or review your recordings except when necessary to provide technical support and only if you explicitly request assistance.
+</p>
+
+<h3>C. Device & Diagnostic Information</h3>
+<p>We may collect limited technical information such as:</p>
+<ul>
+  <li>Device type</li>
+  <li>Operating system version</li>
+  <li>App version</li>
+  <li>Crash reports and diagnostic logs</li>
+</ul>
+<p>This information is used solely to improve app stability and performance.</p>
+
+<h3>D. Subscription & Payment Information</h3>
+<p>All purchases are processed by Apple through the App Store.</p>
+<p>We do not receive or store your credit card or payment details.</p>
+<p>Apple may provide us with limited information such as:</p>
+<ul>
+  <li>Subscription status</li>
+  <li>Product purchased</li>
+  <li>Transaction identifiers</li>
+</ul>
+<p>This information is used only to verify entitlements and enable Pro features.</p>
+
+<h3>E. Permissions</h3>
+<p>STS may request access to:</p>
+<ul>
+  <li>Camera (to record video)</li>
+  <li>Microphone (to record audio)</li>
+  <li>Photo Library or Files (to import/export media)</li>
+</ul>
+<p>You may revoke permissions at any time through iOS Settings. Some features may not function properly if permissions are denied.</p>
+
+<h2>3. How We Use Information</h2>
+<ul>
+  <li>Provide and operate STS features</li>
+  <li>Save and organize your projects</li>
+  <li>Sync data across devices (if iCloud sync is enabled)</li>
+  <li>Verify subscriptions and enable Pro features</li>
+  <li>Improve performance and fix bugs</li>
+  <li>Respond to support inquiries</li>
+</ul>
+<p>We do not sell, rent, or share personal information for advertising or marketing purposes.</p>
+
+<h2>4. Legal Basis for Processing (GDPR)</h2>
+<p>If you are located in the EEA, United Kingdom, or similar jurisdictions, our legal bases include:</p>
+<ul>
+  <li><strong>Performance of a contract:</strong> Providing the app and its features</li>
+  <li><strong>Legitimate interests:</strong> Improving stability, security, and performance</li>
+  <li><strong>Compliance with legal obligations</strong> where required</li>
+</ul>
+
+<h2>5. Data Sharing</h2>
+<p>We do not sell personal information.</p>
+<p>We may share information only in the following circumstances:</p>
+<ul>
+  <li>With Apple (subscription processing and iCloud services)</li>
+  <li>To comply with legal obligations</li>
+  <li>To protect rights and prevent fraud</li>
+  <li>In connection with a business transfer</li>
+</ul>
+
+<h2>6. Data Storage & Retention</h2>
+<p>If cloud sync is disabled, your data is stored locally on your device.</p>
+<p>If iCloud sync is enabled, your data is stored securely using Apple’s CloudKit under your Apple ID.</p>
+
+<h2>7. Your Privacy Rights (GDPR & CCPA)</h2>
+<p>Depending on your location, you may have rights including:</p>
+<ul>
+  <li>Access your personal information</li>
+  <li>Request correction</li>
+  <li>Request deletion</li>
+  <li>Data portability</li>
+  <li>Restrict or object to processing</li>
+</ul>
+<p>California residents have the right to know what information is collected and request deletion. We do not sell personal information.</p>
+<p>To exercise rights, contact: <a href="mailto:support@itfactor.app">support@itfactor.app</a></p>
+
+<h2>8. Data Deletion</h2>
+<p>You may delete locally stored data by deleting the app.</p>
+<p>If iCloud sync is enabled, manage stored data through your Apple ID iCloud settings.</p>
+
+<h2>9. Children’s Privacy</h2>
+<p>STS is not intended for children under 13. We do not knowingly collect personal information from children.</p>
+
+<h2>10. International Users</h2>
+<p>Your information may be processed in the United States or other jurisdictions where service providers operate.</p>
+
+<h2>11. Changes to This Policy</h2>
+<p>We may update this Privacy Policy from time to time. We will update the Effective Date when changes are made.</p>
+
 </body>
 </html>
