--- a/terms.html
+++ b/terms.html
@@ -2,57 +2,188 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Terms of Service – iTFactor</title>
+  <title>Terms of Service – iT Factor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       background: #0b0b0b;
       color: #ffffff;
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      max-width: 700px;
+      max-width: 750px;
       margin: 40px auto;
       padding: 20px;
-      line-height: 1.6;
+      line-height: 1.65;
     }
-    h1, h2 {
-      margin-top: 30px;
+    h1 {
+      margin-bottom: 10px;
+    }
+    h2 {
+      margin-top: 32px;
+      font-size: 1.1rem;
+      letter-spacing: 0.5px;
+    }
+    h3 {
+      margin-top: 20px;
+      font-size: 1rem;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    li {
+      margin-bottom: 8px;
     }
     a {
       color: #ffffff;
       opacity: 0.85;
+      text-decoration: none;
+    }
+    a:hover {
+      opacity: 1;
+      text-decoration: underline;
+    }
+    .meta {
+      opacity: 0.8;
+      margin-bottom: 20px;
+    }
+    hr {
+      border: none;
+      border-top: 1px solid #333;
+      margin: 30px 0;
     }
   </style>
 </head>
 <body>
-  <h1>Terms of Service</h1>
 
+  <h1>Self Tape Studio (STS) – Terms of Service</h1>
+
+  <div class="meta">
+    <strong>Effective Date:</strong> February 22, 2026<br>
+    <strong>Developer:</strong> Kevin Barrett<br>
+    <strong>Contact:</strong> <a href="mailto:support@itfactor.app">support@itfactor.app</a>
+  </div>
+
+  <hr>
+
+  <h2>1. Agreement to Terms</h2>
   <p>
-    By using iTFactor, you agree to these terms.
+    By downloading, installing, accessing, or using Self Tape Studio (“STS”), you agree to be bound by these Terms of Service. If you do not agree to these Terms, do not use the app.
+  </p>
+  <p>These Terms apply to all users of STS.</p>
+
+  <h2>2. Eligibility</h2>
+  <p>
+    You must be at least 13 years old (or the minimum age required in your jurisdiction) to use STS. By using the app, you represent that you meet this requirement.
   </p>
 
-  <h2>Use of the App</h2>
+  <h2>3. Apple App Store Terms</h2>
+  <p>If you downloaded STS from the Apple App Store:</p>
+  <ul>
+    <li>These Terms are between you and Kevin Barrett, not Apple.</li>
+    <li>Apple is not responsible for STS or its content.</li>
+    <li>Apple has no obligation to provide maintenance or support services.</li>
+    <li>Apple is a third-party beneficiary of these Terms and may enforce them against you.</li>
+  </ul>
+  <p>All purchases are subject to Apple’s applicable terms and policies.</p>
+
+  <h2>4. Your Content</h2>
+
+  <h3>Ownership</h3>
   <p>
-    iTFactor is provided for creating and managing self-taped auditions.
-    You are responsible for content you create and upload.
+    You retain all ownership rights to the videos, audio, images, scripts, metadata, and other materials you create or upload in STS (“User Content”).
+  </p>
+  <p>We do not claim ownership of your creative work.</p>
+
+  <h3>License to Operate the App</h3>
+  <p>
+    You grant us a limited, non-exclusive license to store, process, and display your User Content solely for the purpose of operating and providing STS features (e.g., saving projects, syncing through iCloud if enabled, enabling exports).
+  </p>
+  <p>We do not use your content for advertising or marketing purposes.</p>
+
+  <h2>5. Acceptable Use</h2>
+  <p>You agree not to:</p>
+  <ul>
+    <li>Violate any applicable laws</li>
+    <li>Infringe intellectual property, privacy, or publicity rights</li>
+    <li>Upload malicious code</li>
+    <li>Attempt to reverse engineer or interfere with STS</li>
+    <li>Use STS for unlawful or abusive purposes</li>
+  </ul>
+
+  <h2>6. Subscriptions and Billing</h2>
+  <p>STS offers auto-renewing subscriptions through Apple In-App Purchase.</p>
+  <ul>
+    <li>Payment is charged to your Apple ID account at confirmation of purchase.</li>
+    <li>Subscriptions automatically renew unless canceled at least 24 hours before the end of the current billing period.</li>
+    <li>Your account will be charged for renewal within 24 hours prior to the end of the current period.</li>
+    <li>You may manage or cancel subscriptions in your device settings under Apple ID → Subscriptions.</li>
+    <li>We do not handle refunds. Refund requests must be submitted directly to Apple and are governed by Apple’s policies.</li>
+  </ul>
+  <p>
+    Free trials and promotional pricing, if offered, convert to paid subscriptions unless canceled before the trial period ends.
   </p>
 
-  <h2>Intellectual Property</h2>
+  <h2>7. Data and Storage</h2>
   <p>
-    You retain ownership of your content. iTFactor does not claim ownership
-    over user-created media.
+    STS may store data locally on your device and/or in your personal iCloud account if cloud sync is enabled.
+  </p>
+  <p>
+    You are responsible for exporting and backing up your content. While we strive to maintain reliable operation, we are not responsible for loss of data due to device failure, user deletion, or circumstances beyond our control.
   </p>
 
-  <h2>Disclaimer</h2>
+  <h2>8. Service Availability</h2>
   <p>
-    The app is provided “as is” without warranties of any kind.
+    We may modify, suspend, or discontinue features of STS at any time. We will attempt to provide reasonable notice when practical.
+  </p>
+  <p>We do not guarantee uninterrupted or error-free operation.</p>
+
+  <h2>9. Disclaimer of Warranties</h2>
+  <p>
+    STS is provided “as is” and “as available.” To the maximum extent permitted by law, we disclaim all warranties, express or implied, including merchantability, fitness for a particular purpose, and non-infringement.
   </p>
 
-  <h2>Contact</h2>
+  <h2>10. Limitation of Liability</h2>
+  <p>To the maximum extent permitted by law, Kevin Barrett shall not be liable for:</p>
+  <ul>
+    <li>Indirect, incidental, consequential, or punitive damages</li>
+    <li>Loss of profits</li>
+    <li>Loss of data</li>
+    <li>Business interruption</li>
+  </ul>
   <p>
-    Questions about these terms can be sent to
-    <a href="mailto:support@itfactor.app">support@itfactor.app</a>.
+    Total liability shall not exceed the amount you paid for STS in the 12 months preceding the claim.
   </p>
 
-  <p><em>Last updated: January 2026</em></p>
+  <h2>11. Indemnification</h2>
+  <p>
+    You agree to indemnify and hold harmless Kevin Barrett from claims arising out of:
+  </p>
+  <ul>
+    <li>Your misuse of STS</li>
+    <li>Your violation of these Terms</li>
+    <li>Your infringement of third-party rights</li>
+  </ul>
+
+  <h2>12. Termination</h2>
+  <p>You may stop using STS at any time.</p>
+  <p>
+    We may suspend or terminate access if you violate these Terms or if required by law.
+  </p>
+
+  <h2>13. Governing Law</h2>
+  <p>
+    These Terms are governed by the laws of the Commonwealth of Pennsylvania, United States, without regard to conflict of law principles.
+  </p>
+
+  <h2>14. Changes to Terms</h2>
+  <p>
+    We may update these Terms from time to time. Continued use of STS after updates constitutes acceptance of the revised Terms.
+  </p>
+
+  <h2>15. Contact</h2>
+  <p>
+    For questions regarding these Terms:
+    <a href="mailto:support@itfactor.app">support@itfactor.app</a>
+  </p>
+
 </body>
 </html>
