--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>iT Factor — self tape studio</title>
+  <title>iT Factor</title>
+  <subtitle>Self Tape Studio</subtitle>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Hollywood-grade self tapes on iPhone. Built for working actors." />
 
