--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <link rel="icon" sizes="16x16" href="/favicon_16.png" type="image/png" />
   <link rel="icon" sizes="32x32" href="/favicon_32.png" type="image/png" />
   <link rel="icon" sizes="192x192" href="/favicon_192.png" type="image/png" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#7c3aed" />
   <meta name="theme-color" content="#0b0b0b" />
 
   <!-- Preload the logo for faster first paint -->
-  <link rel="preload" as="image" href="/logo.png" />
+  <link rel="preload" as="image" href="logo.png" />
 
   <style>
     :root{
@@ -446,7 +446,7 @@
     <main class="card" role="main" aria-label="it factor — self tape studio landing page">
       <section class="top">
         <!-- Put your main logo file in the repo root as logo.png (or change path below) -->
-        <img class="logo" src="/logo.png" alt="iT Factor logo" width="88" height="88" loading="eager" decoding="async" />
+        <img class="logo" src="logo.png" alt="iT Factor logo" width="88" height="88" loading="eager" decoding="async" />
 
         <div class="brand-title" aria-label="iT Factor Self Tape Studio">
           <div class="line1">iT Factor</div>
@@ -523,8 +523,8 @@
       </div>
 
       <footer>
-        <a href="/privacy.html">Privacy Policy</a> ·
-        <a href="/terms.html">Terms of Service</a><br />
+        <a href="privacy.html">Privacy Policy</a> ·
+        <a href="terms.html">Terms of Service</a><br />
         © <span id="year"></span> it factor — self tape studio
       </footer>
     </main>
@@ -586,7 +586,7 @@
       const maxShots = 5;
       for(let i = 1; i <= maxShots; i++){
         const img = document.createElement('img');
-        img.src = `/gallery_${i}.png`;
+        img.src = `./gallery_${i}.png`;
         img.alt = `App screenshot ${i}`;
         img.loading = 'lazy';
         img.decoding = 'async';
