--- a/index.html
+++ b/index.html
@@ -347,25 +347,27 @@
 
     /* Gallery modal */
     .gallery-grid{
-      display:grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 12px;
-    }
-    .shot{
-      aspect-ratio: 9 / 16;
-      border-radius: 18px;
-      border: 1px solid rgba(255,255,255,0.12);
-      background:
-        radial-gradient(300px 220px at 35% 25%, rgba(178,107,255,0.18), transparent 60%),
-        radial-gradient(300px 220px at 70% 70%, rgba(75,123,255,0.12), transparent 58%),
-        rgba(0,0,0,0.20);
       display:flex;
-      align-items:center;
-      justify-content:center;
-      color: rgba(255,255,255,0.58);
-      font-size: 13px;
-      text-align:center;
-      padding: 10px;
+      gap: 14px;
+      overflow-x:auto;
+      overflow-y:hidden;
+      padding: 10px 6px 14px;
+      margin: 0 -6px; /* allow edge-to-edge scroll while keeping card padding */
+      scroll-snap-type: x mandatory;
+      -webkit-overflow-scrolling: touch;
+      scrollbar-width: none; /* Firefox */
+    }
+    .gallery-grid::-webkit-scrollbar{ display:none; }
+    .shot{
+      flex: 0 0 min(240px, 72vw);
+      aspect-ratio: 9 / 19.5; /* iPhone-ish */
+      border-radius: 18px;
+      border: 1px solid rgba(255,255,255,0.10);
+      background: rgba(0,0,0,0.18);
+      overflow:hidden;
+      scroll-snap-align: start;
+      box-shadow: 0 14px 44px rgba(0,0,0,0.42);
+      position:relative;
     }
     @media (max-width: 860px){
       .gallery-grid{ grid-template-columns: 1fr; }
@@ -390,6 +392,11 @@
       height:100%;
       object-fit: cover;
       display:block;
+      transform: translateZ(0);
+      transition: transform .18s ease;
+    }
+    @media (hover:hover){
+      .shot:hover img{ transform: scale(1.02); }
     }
 
     /* Pricing - match site glow */
@@ -438,7 +445,36 @@
       white-space:nowrap;
     }
 
-  </style>
+  
+    @media (min-width: 900px){
+      .shot{ flex-basis: 220px; }
+    }
+
+
+    /* Gallery carousel edge fades */
+    .gallery-wrap{
+      position:relative;
+      margin-top: 6px;
+    }
+    .gallery-wrap::before,
+    .gallery-wrap::after{
+      content:"";
+      position:absolute;
+      top:0; bottom:0;
+      width: 36px;
+      pointer-events:none;
+      z-index: 2;
+    }
+    .gallery-wrap::before{
+      left:0;
+      background: linear-gradient(90deg, rgba(0,0,0,0.58), transparent);
+    }
+    .gallery-wrap::after{
+      right:0;
+      background: linear-gradient(270deg, rgba(0,0,0,0.58), transparent);
+    }
+
+</style>
 </head>
 
 <body>
@@ -538,7 +574,7 @@
         <button class="close" type="button" data-close>Close</button>
       </div>
       <div class="modal-body">
-        <div class="gallery-grid" id="galleryGrid" aria-label="Gallery screenshots"></div>
+        <div class="gallery-wrap"><div class="gallery-grid" id="galleryGrid" aria-label="Gallery screenshots"></div></div>
       </div>
     </div>
   </div>
