--- a/privacy.html
+++ b/privacy.html
@@ -48,6 +48,13 @@
       margin-bottom: 30px;
     }
   </style>
+
+  <meta name="description" content="Privacy Policy – iT Factor" />
+  <link rel="canonical" href="https://itfactor.studio/privacy.html" />
+  <meta property="og:title" content="Privacy Policy – iT Factor" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://itfactor.studio/privacy.html" />
+
 </head>
 <body>
 
