--- a/terms.html
+++ b/terms.html
@@ -51,6 +51,13 @@
       margin: 30px 0;
     }
   </style>
+
+  <meta name="description" content="Terms of Service – iT Factor" />
+  <link rel="canonical" href="https://itfactor.studio/terms.html" />
+  <meta property="og:title" content="Terms of Service – iT Factor" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://itfactor.studio/terms.html" />
+
 </head>
 <body>
 
